--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,14 +13,9 @@ services:
       - /app/node_modules
 
   flask:
-    image: tiangolo/uwsgi-nginx-flask:python3.8
+    build: ./api
     ports:
       - '5000:80'
     environment:
       - FLASK_APP=app/api.py
       - 'RUN=flask run --host=0.0.0.0 --port=80'
-      - 'STATIC_URL=/static'
-      - 'TATIC_PATH=/app/static'
-    command: sh -c "pip install -r requirements.txt && flask run --host=0.0.0.0 --port=80"
-    volumes:
-      - ./api:/app
